--- a/website/Data Table.RMD
+++ b/website/Data Table.RMD
@@ -25,10 +25,9 @@ data <- select(datatable, "County", "Cases", "Deaths", "Tests")
 
 ```{r Data Table, message=FALSE, warning=FALSE}
 
-datatable(data, rownames = FALSE, options = list(
+datatable(data, style = 'bootstrap', class = 'table-hover', rownames = FALSE, options = list(
   dom = 't',
   pageLength = 25,
-  style = 'bootstrap',
   initComplete = JS(
     "function(settings, json) {",
     "$('body').css({'font-family': 'Helvetica'});",
