--- a/website/blog/_posts/2020-08-12-welcome-to-our-dashboard/welcome-to-our-dashboard.Rmd
+++ b/website/blog/_posts/2020-08-12-welcome-to-our-dashboard/welcome-to-our-dashboard.Rmd
@@ -2,34 +2,18 @@
 title: "Welcome to our dashboard!"
 description: |
   A short description of the post.
-author:
-  - name: Adam Chazan, Prayag Gordy
 date: 08-12-2020
 output:
   distill::distill_article:
     self_contained: false
+    toc: true
+    toc_depth: 2
 draft: false
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 ```
-# Table of contents
-1. Intro
-2. Elements
-	+ Maps
-	+ Change maps
-	+ Total cases
-	+ Testing
-3. Topline indicators
-4. Line charts
-	+ Hospitalizations
-	+ Cases, deaths, positivity
-5. Bar charts
-6. Tables
-	+ Cases and deaths
-	+ Testing
-
 # Intro
 Our goal in this endeavor was to build a refined, statistically sound, and easy-to-use dashboard for the Maryland public.
 
@@ -47,7 +31,7 @@ The data was gathered from ____ and manipulated using R.
 ### Change in cases maps
 The most notable difference between our dashboard and the MDH official dashboard is the inclusion of a change in cases map. We are now months into the pandemic and little information can be gathered from total case counts. Notable outbreaks have occurred in recent weeks such as an outbreak at a crab packaging plant in Dorchester county and a steep increase in cases in the Baltimore area. Our map would clearly show outbreaks of this nature, while a total cases map does not offer sufficient information.
 
-Communicating this information well is especially important in combating the spread of the virus, as it is absolutely critical that residents are aware of the locations of outbreaks so that they are able to avoid them.
+~~Communicating this information well is especially important in combating the spread of the virus, as it is absolutely critical that residents are aware of the locations of outbreaks so that they are able to avoid them.~~
 
 To account for variation in daily case counts, our map compares the 7-day average in cases from today’s date with the average from 14 days prior. We then display a color based on the magnitude of the difference.
 
@@ -57,16 +41,24 @@ The map’s scale is divergent, meaning that it displays two colors. Red represe
 We have also included the total cases maps present in the MDH dashboard as well. While they do not offer a useful picture of the pandemic right now, they still provide useful context about the areas disproportionately affected over the course of the pandemic.
 
 ### Testing map
-Similar to the MDH dashboard, we have included a map of tests administered. However, we have adjusted this map by population.
+Similar to the MDH dashboard, we have included a map of tests administered. However, we have adjusted this map by population. We believe this metric is much more effective at quantifying the state's testing response.
 
-Topline Numbers
+## Topline numbers
 
-# Line Charts
+## Line charts
 
-# Bar Charts
+### Hospitalizations
 
-# Tables
+### Cases, deaths, positivity rate
+
+## Bar charts
+
+## Tables
 We felt that it was important to allow the user to easily view the data for themselves.
+
+### Cases and deaths
+
+### Testing
 
 # Resources
 [Observable Collection](https://observablehq.com/collection/@adamchzn/coronavirus-dashboard)  
