--- a/website/blog/_posts/2020-08-12-welcome-to-our-dashboard/welcome-to-our-dashboard.Rmd
+++ b/website/blog/_posts/2020-08-12-welcome-to-our-dashboard/welcome-to-our-dashboard.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Welcome to our dashboard!"
 description: |
-  A short description of the post.
+  Reasoning, methodology, and more
 date: 08-12-2020
 output:
   distill::distill_article:
