--- a/website/blog/_posts/2020-08-12-welcome-to-our-dashboard/welcome-to-our-dashboard.Rmd
+++ b/website/blog/_posts/2020-08-12-welcome-to-our-dashboard/welcome-to-our-dashboard.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(echo = FALSE)
 # Introduction
 Our goal in this endeavor was to build a refined, statistically sound, and easy-to-use dashboard for the Maryland public.
 
-We consider the Maryland Department of Health (MDH) official dashboard difficult to use and focused on the wrong indicators. It is far more important, for example, to examine the change in new cases than the number of cumulative cases; additionally, MDH doesn’t adjust any of its data for population, which is crucial in a state as diverse as Maryland.
+We consider the Maryland Department of Health (MDH) official dashboard difficult to use and focused on the wrong indicators. It is far more important, for example, to examine the *change* in new cases than the number of cumulative cases; additionally, MDH doesn’t adjust any of its data for population, which is crucial in a state as diverse as Maryland.
 
 Our dashboard focuses on the correct indicators, standardized where necessary, to accurately relay the current landscape.
 
@@ -43,7 +43,7 @@ These are the building blocks of the dashboard.
 One of D3’s most attractive advantages is the ability to create high quality, lightweight, interactive maps.
 
 ### Change in cases maps
-The most notable difference between our dashboard and the MDH dashboard is our focus on a “change in cases” map. At this point in the pandemic, that Baltimore has recorded 13,000 cases is practically meaningless. Outbreaks and increases in cases is far more important to track. Our map would clearly show, for example, an outbreak at a crab-packing plant in Fishing Creek, a town in the sparsely populated Dorchester County; or a steep increase in cases in the Baltimore region. A map of cumulative cases would be unable to reflect the former and unlikely to show the latter.
+The most notable difference between our dashboard and the MDH dashboard is our focus on a “change in cases” map. At this point in the pandemic, that Baltimore has recorded 13,000 cases is practically meaningless. Outbreaks and increases in cases are far more important to track. Our map would clearly show, for example, an outbreak at a crab-packing plant in Fishing Creek, a town in the sparsely populated Dorchester County; or a steep increase in cases in the Baltimore region. A map of cumulative cases would be unable to reflect the former and unlikely to show the latter.
 
 To account for variation in daily case counts, our map compares today’s seven-day rolling average in cases with the average from two weeks prior. We then display a color based on the magnitude of the difference.
 
@@ -55,7 +55,7 @@ We have also included the total cases maps present in the MDH dashboard. While t
 ### Testing map
 Similar to the MDH dashboard, we have included a map of tests administered. However, we have adjusted this map by population. We believe this metric is much more effective at quantifying the state's testing response.
 
-Montgomery County, the most populated jurisdiction in the state, has of course conducted the most tests—but ranks only thirteenth in tests per capita. Kent County, located in the Eastern Shore and the least populated county in Maryland, has tested about one-third of its residents.
+Montgomery County, the most populated jurisdiction in the state, has of course conducted the most tests—but ranks only thirteenth in tests *per capita*. Kent County, located in the Eastern Shore and the least populated county in Maryland, has administered a volume of tests equivalent to roughly one-third of its population.
 
 ## Exploring ratios
 One experimental feature we’ve implemented on the “total cases by county” and “testing by county” maps, is expressing counts as ratios. While these fractions are simplifications, they do well at contextualizing daunting numbers like case counts. We expect that some viewers may better understand a small ratio—one in four, three in 11, etc.—than a big number.
