cleaned up AA post

--- a/website/blog/_posts/2020-09-04-monitoring-anne-arundel-county/monitoring-anne-arundel-county.Rmd
+++ b/website/blog/_posts/2020-09-04-monitoring-anne-arundel-county/monitoring-anne-arundel-county.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Monitoring Anne Arundel County"
+title: "Could Anne Arundel County be facing an increase in COVID?"
 description: |
-  A short description of the post.
+  New daily cases and positivity rate are on the rise in the Maryland capital's county.
 date: 09-04-2020
 output:
   distill::distill_article:
@@ -10,7 +10,7 @@ draft: true
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 
 easypackages::libraries("tidyverse", "zoo")
 
@@ -22,23 +22,40 @@ cases <- read_csv("../../../../data/md_counties_cases.csv")
 testing <- read_csv("../../../../data/md_population_tested_county.csv")
 ```
 
-```{r message=FALSE, warning=FALSE}
-df <- inner_join(cases, testing) %>% group_by(fips) %>% mutate(new_tests = value - lag(value), pos_rate = new_cases/new_tests, pos_rate_avg = zoo::rollmeanr(pos_rate, fill = NA, k = 7)) %>% ungroup()
+```{r}
+df <- inner_join(cases, testing) %>% 
+	group_by(fips) %>% 
+	mutate(new_tests = value - lag(value), 
+				 pos_rate = new_cases/new_tests, 
+				 pos_rate_avg = zoo::rollmeanr(pos_rate, fill = NA, k = 7)) %>% 
+	ungroup()
 ```
 
 ```{r}
-aa_county <- filter(df, fips == "24003")
+aa_county <- filter(df,
+										fips == "24003",
+										date >= max(date) - 31)
 
-statewide <- group_by(df, date) %>% summarize(new_cases = sum(new_cases), new_tests = sum(new_tests)) %>% ungroup() %>% mutate(pos_rate = new_cases/new_tests, pos_rate_avg = zoo::rollmeanr(pos_rate, fill = NA, k = 7))
+statewide <- group_by(df, date) %>% 
+	summarize(new_cases = sum(new_cases), 
+						new_tests = sum(new_tests)) %>% 
+	ungroup() %>% 
+	mutate(pos_rate = new_cases/new_tests, 
+				 pos_rate_avg = zoo::rollmeanr(pos_rate, fill = NA, k = 7)) %>% 
+	filter(date >= max(date) - 31)
 ```
 
-```{r fig.width=5}
-ggplot(aa_county %>% filter(date >= as.Date("2020-08-04")), aes(x = date, y = pos_rate_avg)) + 
+```{r layout="l-body-outset"}
+ggplot(aa_county, aes(x = date, y = pos_rate_avg)) + 
 	geom_point(size = 3, alpha = 0.5, color = "cadetblue3") + 
-	geom_smooth(data = statewide %>% filter(date >= as.Date("2020-08-04")), alpha = 0.25, size = 1.5, color = "gray", se = F) + 
+	geom_smooth(data = statewide, alpha = 0.25, size = 1.5, color = "gray", se = F) + 
 	geom_smooth(se = F, alpha = 0.8, color = "cadetblue4", size = 1.5) + 
 	theme_silver_chips_minimal() + 
-	scale_y_continuous(labels = scales::percent) + labs(y = "7-day average positivity rate", x = NULL, title = "Positivity rate increasing in Anne Arundel County", subtitle = "The gray line shows the statewide positivity rate") + 
+	scale_y_continuous(labels = scales::percent) + 
+	labs(x = NULL, 
+			 y = "7-day average positivity rate", 
+			 title = "Positivity rate increasing in Anne Arundel County", 
+			 subtitle = "The gray line shows the statewide positivity rate") + 
 	theme(plot.title.position = "plot", panel.grid.major.x = element_blank(), panel.grid.minor.x = element_blank()) + 
 	scale_x_date(date_labels = "%B %d")
 ```
