--- a/website/Data Table.RMD
+++ b/website/Data Table.RMD
@@ -16,15 +16,13 @@ new_col <- paste("new", tolower(params$indic), sep = "_") %>%
 pop <- read_csv(here("population", "county.csv"))
 cases <- read_csv(here("data", "md_counties_cases.csv")) 
 deaths <- read_csv(here("data", "md_counties_deaths.csv"))
+pos <- read_csv(here("data", "md_counties_pos.csv"))
+
 daily_tests <- read_csv(here("data", "md_daily_volume_tested_county.csv")) %>% 
 	rename(new_tests = value) %>% 
-	inner_join(cases, by = c("date", "county", "fips")) %>% 
-	group_by(county, fips) %>% 
-	mutate(rolling_new_cases = roll_sum(new_cases, 7, align = "right", fill = NA),
-				 rolling_new_tests = roll_sum(new_tests, 7, align = "right", fill = NA),
-				 positivity = rolling_new_cases/rolling_new_tests) %>% 
-	ungroup() %>% 
-	select(county, date, fips, positivity)
+	inner_join(pos, by = c("date", "county", "fips")) %>% 
+	select(county, date, fips, positivity = average)
+
 population_tested <- read_csv(here("data", "md_population_tested_county.csv")) %>% 
 	rename(tests = value) %>% 
 	inner_join(cases, by = c("date", "county", "fips")) %>% 
